# usmg

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  TODO.md
app/: Cargo.toml  README.md
app/src/: game.rs  interface.rs  lib.rs  util.rs
assets/: Cargo.toml  build.rs
assets/src/: terrain.sprites.csv  terrain.voidsn
desktop/: Cargo.toml  Justfile
desktop/src/: interface.rs  main.rs
server/: Cargo.toml  Justfile  build.rs  example.usmg.toml
server/src/: config.rs  main.rs
web/: Cargo.toml  Justfile  index.js  package-lock.json  package.json  template.html  webpack.config.js
web/src/: interface.rs  lib.rs
