[package]
name = "usmg-server"
version = "0.1.0"
edition = "2021"

[dependencies]
assets = { package = "usmg-assets", path = "../assets", version = "0.1.0" }
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.9", features = ["server", "tokio", "http1", "http2"] }
log = "0.4.22"
maud = "0.26.0"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "net", "macros"] }
toml = "0.8.19"
